--- a/style.css
+++ b/style.css
@@ -1,5 +1,4 @@
 #button {
-  background-color:#44c767;
   -moz-border-radius:28px;
   -webkit-border-radius:28px;
   border-radius:28px;
@@ -10,9 +9,29 @@
   font-family:Arial;
   font-size:17px;
   padding:16px 31px;
+  text-align:center;
   text-decoration:none;
   text-shadow:0px 1px 0px #2f6627;
+  width: 80px;
+  max-width: 80px;
 }
-#button:hover {
-  background-color:#5cbf2a;
+
+.capture {
+  background-color:#0f9d58;
+}
+
+.capture:hover {
+  background-color:#34a853;
+}
+
+.serialize {
+  background-color:#f4b400;
+}
+
+.download {
+  background-color:#3366ff;
+}
+
+.download:hover {
+  background-color:#4285f4;
 }
